--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -233,6 +233,13 @@
       "noData": "No data found",
       "pleaseSelectTenant": "Please select a region"
     },
+    "pagination": {
+      "showing": "Showing {{start}} to {{end}} of {{total}} entries",
+      "page": "page",
+      "previous": "Previous",
+      "next": "Next",
+      "pageInfo": "Page {{current}} of {{total}}"
+    },
     "published": "Published",
     "isCrawlable": "Allow search engines to crawl the site",
     "isCrawlableDescription": "If enabled, search engines (Google, Bing, etc.) can index the site. If disabled, robots.txt and meta tags will prevent indexing.",
