fix multiple tenant map, show my location feature

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -84,6 +84,20 @@
       "rainSafe": "Regensicheres Programm",
       "contextFilters": "Kontextbasierte Filter"
     },
+    "yourLocation": "Du bist hier",
+    "showRoute": "Route anzeigen",
+    "hideRoute": "Route ausblenden",
+    "distance": "Entfernung",
+    "routeDistance": "Route",
+    "walkingTime": "Gehzeit",
+    "clickAgainToNavigate": "Nochmal klicken zum Navigieren",
+    "tooFarAway": "Zu weit entfernt (mehr als {{distance}} km)",
+    "hour": "Stunde",
+    "hours": "Stunden",
+    "minute": "Minute",
+    "minutes": "Minuten",
+    "locationPermissionDenied": "Standortfreigabe verweigert. Bitte aktivieren Sie die Standortfreigabe in Ihren Browsereinstellungen.",
+    "locationPermissionPrompt": "Bitte aktivieren Sie die Standortfreigabe, um Ihre Position anzuzeigen.",
     "footer": {
       "tagline": "Entdecke lokale Schätze",
       "legal": "Rechtliche Informationen",
