--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -84,6 +84,20 @@
       "rainSafe": "Rain-safe program",
       "contextFilters": "Context-based filters"
     },
+    "yourLocation": "You are here",
+    "showRoute": "Show route",
+    "hideRoute": "Hide route",
+    "distance": "Distance",
+    "routeDistance": "route",
+    "walkingTime": "Walking time",
+    "clickAgainToNavigate": "Click again to navigate",
+    "tooFarAway": "Too far away (more than {{distance}} km)",
+    "hour": "hour",
+    "hours": "hours",
+    "minute": "min",
+    "minutes": "min",
+    "locationPermissionDenied": "Location sharing denied. Please enable location sharing in your browser settings.",
+    "locationPermissionPrompt": "Please enable location sharing to show your position.",
     "footer": {
       "tagline": "Discover local treasures",
       "legal": "Legal Information",
