--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -47,7 +47,7 @@
     },
     "open": "Megnyitás",
     "category": "Kategória",
-    "priceBand": "Ár sáv",
+    "priceBand": "Ár szint",
     "tags": "Címkék",
     "address": "Cím",
     "phone": "Telefon",
@@ -107,10 +107,13 @@
   },
   "admin": {
     "dashboard": "Irányítópult",
-    "openPublicPage": "Publikus oldal megnyitása",
+    "dashboardWelcome": "Üdvözlünk az admin felületen",
+    "openPublicPage": "Publikus oldal",
+    "backToPublicSite": "Vissza a publikus oldalra",
+    "loggedOutSuccessfully": "Sikeresen kijelentkeztél",
     "categories": "Kategóriák",
     "tags": "Címkék",
-    "priceBands": "Ár sávok",
+    "priceBands": "Ár szintek",
     "places": "Helyek",
     "towns": "Települések",
     "legalPages": "Jogi oldalak",
@@ -123,9 +126,14 @@
     "readMore": "Tovább",
     "settings": "Beállítások",
     "appSettings": "Alkalmazás beállítások",
+    "appSettingsDesc": "Rendszer szintű beállítások kezelése",
     "profileMenu": "Profil",
     "logout": "Kijelentkezés",
+    "language": "Nyelv",
+    "tenant": "Terület",
+    "userInfo": "Felhasználó",
     "login": "Bejelentkezés",
+    "loginDescription": "Jelentkezz be az admin felületre",
     "register": "Regisztráció",
     "registering": "Regisztrálás...",
     "registrationFailed": "Regisztráció sikertelen",
@@ -137,9 +145,31 @@
     "alreadyHaveAccount": "Már van fiókod?",
     "dontHaveAccount": "Nincs még fiókod?",
     "forgotPassword": "Elfelejtetted a jelszót?",
+    "forgotPasswordDescription": "Add meg az email címed és küldünk egy jelszó visszaállító linket",
+    "sendResetLink": "Visszaállító link küldése",
+    "sending": "Küldés...",
+    "resetToken": "Visszaállító token",
+    "resetEmailFailed": "Sikertelen email küldés",
+    "backToLogin": "Vissza a bejelentkezéshez",
+    "resetPassword": "Jelszó visszaállítása",
+    "resetPasswordDescription": "Add meg az új jelszavad",
+    "newPassword": "Új jelszó",
+    "confirmPassword": "Jelszó megerősítése",
+    "passwordsDoNotMatch": "A jelszavak nem egyeznek",
+    "resetting": "Visszaállítás...",
+    "resetTokenMissing": "Visszaállító token hiányzik",
+    "resetPasswordFailed": "Jelszó visszaállítás sikertelen",
+    "passwordResetSuccess": "Sikeres jelszó visszaállítás",
+    "passwordResetSuccessMessage": "A jelszavad sikeresen vissza lett állítva. Átirányítás a bejelentkezéshez...",
+    "goToLogin": "Bejelentkezés",
+    "noResetToken": "Nincs visszaállító token. Kérlek használd az emailben kapott linket.",
     "username": "Felhasználónév",
     "email": "Email",
+    "invalidEmail": "Érvénytelen email cím",
+    "enterValidEmail": "Kérjük, adj meg egy érvényes email címet",
     "password": "Jelszó",
+    "passwordTooShort": "A jelszónak legalább 6 karakter hosszúnak kell lennie",
+    "createAccount": "Hozz létre egy új fiókot",
     "firstName": "Keresztnév",
     "lastName": "Vezetéknév",
     "bio": "Bio (opcionális)",
@@ -188,7 +218,7 @@
     "siteSettingsUpdated": "Oldal beállítások frissítve.",
     "selectCategory": "Válassz kategóriát",
     "selectTown": "Válassz települést",
-    "selectPriceBand": "Válassz ár sávot",
+    "selectPriceBand": "Válassz ár szintet",
     "heroImageUrl": "Hero kép URL",
     "dashboardCards": {
       "userProfile": "Felhasználói profil",
@@ -197,8 +227,8 @@
       "categoriesDesc": "Helyek kategóriáinak kezelése",
       "tags": "Címkék",
       "tagsDesc": "Helyek címkéinek kezelése",
-      "priceBands": "Ár sávok",
-      "priceBandsDesc": "Ár sávok kezelése",
+      "priceBands": "Ár szintek",
+      "priceBandsDesc": "Ár szintek kezelése",
       "places": "Helyek",
       "placesDesc": "Helyek kezelése",
       "events": "Események",
@@ -219,8 +249,8 @@
       "editCategory": "Kategória szerkesztése",
       "newTag": "Új címke",
       "editTag": "Címke szerkesztése",
-      "newPriceBand": "Új ár sáv",
-      "editPriceBand": "Ár sáv szerkesztése",
+      "newPriceBand": "Új ár szint",
+      "editPriceBand": "Ár szint szerkesztése",
       "newPlace": "Új hely",
       "editPlace": "Hely szerkesztése",
       "newTown": "Új település",
@@ -244,8 +274,23 @@
       "status": "Státusz",
       "actions": "Műveletek",
       "noData": "Nincs adat",
+      "noSearchResults": "Nincs találat a keresésre",
       "pleaseSelectTenant": "Kérjük, válassz területet"
     },
+    "searchPlaceholder": "Keresés név vagy hely szerint...",
+    "searchPlaceholders": {
+      "tenants": "Keresés területek között (név, slug)...",
+      "users": "Keresés felhasználók között (név, email, szerepkör)...",
+      "places": "Keresés helyek között (név, kategória, település)...",
+      "categories": "Keresés kategóriák között...",
+      "tags": "Keresés címkék között...",
+      "towns": "Keresés települések között...",
+      "staticPages": "Keresés statikus oldalak között (cím, kategória)...",
+      "legalPages": "Keresés jogi oldalak között (cím, típus)...",
+      "priceBands": "Keresés árszintek között...",
+      "events": "Keresés események között (név, leírás)..."
+    },
+    "searchResults": "{{count}} / {{total}} találat",
     "pagination": {
       "showing": "Megjelenítés: {{start}}-{{end}} / {{total}}",
       "page": "oldal",
@@ -276,10 +321,10 @@
       "createTagFailed": "A címke létrehozása sikertelen",
       "updateTagFailed": "A címke frissítése sikertelen",
       "deleteTagFailed": "A címke törlése sikertelen",
-      "loadPriceBandsFailed": "Az ár sávok betöltése sikertelen",
-      "createPriceBandFailed": "Az ár sáv létrehozása sikertelen",
-      "updatePriceBandFailed": "Az ár sáv frissítése sikertelen",
-      "deletePriceBandFailed": "Az ár sáv törlése sikertelen",
+      "loadPriceBandsFailed": "Az ár szintek betöltése sikertelen",
+      "createPriceBandFailed": "Az ár szint létrehozása sikertelen",
+      "updatePriceBandFailed": "Az ár szint frissítése sikertelen",
+      "deletePriceBandFailed": "Az ár szint törlése sikertelen",
       "loadPlacesFailed": "A helyek betöltése sikertelen",
       "createPlaceFailed": "A hely létrehozása sikertelen",
       "updatePlaceFailed": "A hely frissítése sikertelen",
@@ -341,7 +386,7 @@
     "confirmations": {
       "deleteCategory": "Biztosan törölni szeretnéd ezt a kategóriát?",
       "deleteTag": "Biztosan törölni szeretnéd ezt a címkét?",
-      "deletePriceBand": "Biztosan törölni szeretnéd ezt az ár sávot?",
+      "deletePriceBand": "Biztosan törölni szeretnéd ezt az ár szintet?",
       "deletePlace": "Biztosan törölni szeretnéd ezt a helyet?",
       "deleteTown": "Biztosan törölni szeretnéd ezt a települést?",
       "deleteLegalPage": "Biztosan törölni szeretnéd ezt a jogi oldalt?",
@@ -429,6 +474,8 @@
       "qrCodeAlt": "2FA QR kód"
     },
     "parentCategory": "Szülő kategória",
+    "categoryColor": "Kategória színe (kártya alján)",
+    "categoryColorDescription": "Ez a szín jelenik meg a kártya alján. Hex formátum (pl. #667eea)",
     "order": "Sorrend",
     "orderDescription": "Kisebb szám = előrébb a listában",
     "dragToReorder": "Húzd a kategóriákat a rendezéshez. Húzd egy kategória alá, hogy gyermek kategóriává tedd.",
@@ -481,7 +528,7 @@
       "event": "Esemény",
       "category": "Kategória",
       "tag": "Címke",
-      "priceBand": "Ár sáv",
+      "priceBand": "Ár szint",
       "town": "Település",
       "user": "Felhasználó",
       "tenant": "Terület",
