map related mobile fixes

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -113,6 +113,7 @@
     "distance": "Entfernung",
     "routeDistance": "Route",
     "walkingTime": "Gehzeit",
+    "calculatingRoute": "Route wird berechnet...",
     "clickAgainToNavigate": "Nochmal klicken zum Navigieren",
     "tooFarAway": "Zu weit entfernt (mehr als {{distance}} km)",
     "hour": "Stunde",
