--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -113,6 +113,7 @@
     "distance": "Distance",
     "routeDistance": "route",
     "walkingTime": "Walking time",
+    "calculatingRoute": "Calculating route...",
     "clickAgainToNavigate": "Click again to navigate",
     "tooFarAway": "Too far away (more than {{distance}} km)",
     "hour": "hour",
