--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -122,6 +122,10 @@
     "minutes": "Minuten",
     "locationPermissionDenied": "Standortfreigabe verweigert. Bitte aktivieren Sie die Standortfreigabe in Ihren Browsereinstellungen.",
     "locationPermissionPrompt": "Bitte aktivieren Sie die Standortfreigabe, um Ihre Position anzuzeigen.",
+    "updateAvailable": "Update verfügbar!",
+    "updateDescription": "Aktualisieren Sie die App, um die neuesten Funktionen zu erhalten.",
+    "refresh": "Aktualisieren",
+    "later": "Später",
     "footer": {
       "tagline": "Entdecke lokale Schätze",
       "legal": "Rechtliche Informationen",
