add seo fields to admin

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -17,6 +17,7 @@
     "actions": "Aktionen",
     "siteName": "HelloLocal",
     "title": "Titel",
+    "image": "Bild",
     "none": "Keine",
     "openingHoursEditor": "Öffnungszeiten",
     "openingHoursHint": "Legen Sie die Öffnungszeiten für jeden Tag fest. Wenn ein Tag geschlossen ist, aktivieren Sie das Kontrollkästchen 'Geschlossen'.",
@@ -467,6 +468,14 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Wissensdatenbank",
     "categoryInfok": "Info",
+    "seoTitlePlaceholder": "SEO-Titel (leer lassen für automatisch)",
+    "seoTitleHint": "Wenn leer, wird der Titel verwendet",
+    "seoDescriptionPlaceholder": "SEO-Beschreibung (leer lassen für automatisch)",
+    "seoDescriptionHint": "Wenn leer, werden die ersten 2 Sätze aus dem Inhalt verwendet",
+    "seoImagePlaceholder": "SEO-Bild URL",
+    "seoImageHint": "Wenn leer, wird das Hero-Bild verwendet",
+    "seoKeywordsPlaceholder": "Stichwort1, Stichwort2, Stichwort3",
+    "seoKeywordsHint": "Durch Komma getrennte Stichwörter für Suchmaschinen",
     "eventLog": "Ereignisprotokoll",
     "eventLog.description": "Benutzeraktivitätsprotokolle anzeigen und verwalten",
     "eventLog.filters": "Filter",
