--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -17,6 +17,7 @@
     "actions": "Actions",
     "siteName": "HelloLocal",
     "title": "Title",
+    "image": "Image",
     "none": "None",
     "openingHoursEditor": "Opening Hours",
     "openingHoursHint": "Set opening hours for each day. If a day is closed, check the 'Closed' checkbox.",
@@ -473,6 +474,14 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Knowledge Base",
     "categoryInfok": "Info",
+    "seoTitlePlaceholder": "SEO title (leave empty for auto)",
+    "seoTitleHint": "If empty, the title will be used",
+    "seoDescriptionPlaceholder": "SEO description (leave empty for auto)",
+    "seoDescriptionHint": "If empty, the first 2 sentences from content will be used",
+    "seoImagePlaceholder": "SEO image URL",
+    "seoImageHint": "If empty, the hero image will be used",
+    "seoKeywordsPlaceholder": "keyword1, keyword2, keyword3",
+    "seoKeywordsHint": "Comma-separated keywords for search engines",
     "eventLog": "Event Log",
     "eventLog.description": "View and manage user activity logs",
     "eventLog.filters": "Filters",
