--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -17,6 +17,7 @@
     "actions": "Műveletek",
     "siteName": "HelloLocal",
     "title": "Cím",
+    "image": "Kép",
     "none": "Nincs",
     "openingHoursEditor": "Nyitvatartás",
     "openingHoursHint": "Állítsd be a nyitvatartást minden napra. Ha egy nap zárva van, jelöld be a 'Zárva' négyzetet.",
@@ -519,6 +520,14 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Tudástár",
     "categoryInfok": "Infók",
+    "seoTitlePlaceholder": "SEO cím (ha üres, automatikus)",
+    "seoTitleHint": "Ha üres, akkor a cím lesz használva",
+    "seoDescriptionPlaceholder": "SEO leírás (ha üres, automatikus)",
+    "seoDescriptionHint": "Ha üres, akkor az első 2 mondat a tartalomból",
+    "seoImagePlaceholder": "SEO kép URL",
+    "seoImageHint": "Ha üres, akkor a hero kép lesz használva",
+    "seoKeywordsPlaceholder": "kulcsszó1, kulcsszó2, kulcsszó3",
+    "seoKeywordsHint": "Vesszővel elválasztott kulcsszavak a keresőmotorok számára",
     "eventLog": "Esemény napló",
     "eventLog.description": "Felhasználói tevékenység naplók megtekintése és kezelése",
     "eventLog.filters": "Szűrők",
