final refinements before beta 1

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -115,7 +115,7 @@
       "rainSafe": "Regensicheres Programm",
       "contextFilters": "Kontextbasierte Filter"
     },
-    "yourLocation": "Du bist hier",
+    "yourLocation": "Hier bin ich",
     "showRoute": "Route anzeigen",
     "hideRoute": "Route ausblenden",
     "distance": "Entfernung",
