--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -115,7 +115,7 @@
       "rainSafe": "Rain-safe program",
       "contextFilters": "Context-based filters"
     },
-    "yourLocation": "You are here",
+    "yourLocation": "I'm here",
     "showRoute": "Show route",
     "hideRoute": "Hide route",
     "distance": "Distance",
