--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -115,7 +115,8 @@
       "rainSafe": "Regensicheres Programm",
       "contextFilters": "Kontextbasierte Filter"
     },
-    "yourLocation": "Hier bin ich",
+    "yourLocation": "Hier bin ich jetzt",
+    "showMyLocation": "Meine Position anzeigen",
     "showRoute": "Route anzeigen",
     "hideRoute": "Route ausblenden",
     "distance": "Entfernung",
